--- a/styles.css
+++ b/styles.css
@@ -27,10 +27,8 @@ left: 200px;}
 margin-top: 200px;
 width: 250px;
 height: 250px;}
-.web{height: 250px;
-width: 250px;}
-.cricket{width: 250px;
-height: 250px;}
+.web{}
+.cricket
 .subtitle{font-size: 2.5rem;
 color: #66BFBF;
 font-weight: normal;}
